--- a/usesofvr.html
+++ b/usesofvr.html
@@ -8,20 +8,11 @@
 </head>
 <body>
 
-
-  <div class="topnav">
-    <div class="row">
-    <div class="column">
-    <a href="index.html"><h5>VR</h5></a> 
-  </div>
-  <div class="column">
-    <a href="usesofvr.html"><h5>Uses of VR</h5></a> </div>
-    <div class="column">
-    <a href="historyofvr.html"><h5>The history of VR</h5></a> </div>
-  
-    </div>
-  </div>
-    
+<div class="topnav">
+  <a href="index.html"><h5>VR</h5></a>
+  <a href="usesofvr.html"><h5>Uses of VR</h5></a>
+  <a href="historyofvr.html"><h5>The history of VR</h5></a>
+</div>
 
 <div class="header">
   <a href="https://www.w3schools.com/">Visit W3Schools.com!</a>
@@ -36,13 +27,6 @@
             );
         }
     </script>
- 
-	<script type="text/javascript"
-				src=
-	"https://translate.google.com/translate_a/element.js?
-	cb=googleTranslateElementInit">
-		</script>
-</div>
 
 <div class="row">
   <div class="column" style="background-color:#96e3a8;">
@@ -52,7 +36,7 @@
   </div>
 
   <div class="column" style="background-color:#f4fa81;">
-    <h4>Uses of VR?</h4>
+    <h4>What is VR?</h4>
     <p>write here</p>
     <img src="images/girlwithvrglass.jpg" alt="glass" style="width:100px;height:100px;">
   </div>
@@ -63,12 +47,53 @@
   </div>
 </div>
 
-<div class="Introduction">
+<div class="content1">
   <h2>HTML Table</h2>
+
+<table>
+  <tr>
+    <th>Company</th>
+    <th>Contact</th>
+    <th>Country</th>
+  </tr>
+  <tr>
+    <td>Alfreds Futterkiste</td>
+    <td>Maria Anders</td>
+    <td>Germany</td>
+  </tr>
+  <tr>
+    <td>Centro comercial Moctezuma</td>
+    <td>Francisco Chang</td>
+    <td>Mexico</td>
+  </tr>
+  <tr>
+    <td>Ernst Handel</td>
+    <td>Roland Mendel</td>
+    <td>Austria</td>
+  </tr>
+  <tr>
+    <td>Island Trading</td>
+    <td>Helen Bennett</td>
+    <td>UK</td>
+  </tr>
+  <tr>
+    <td>Laughing Bacchus Winecellars</td>
+    <td>Yoshi Tannamuri</td>
+    <td>Canada</td>
+  </tr>
+  <tr>
+    <td>Magazzini Alimentari Riuniti</td>
+    <td>Giovanni Rovelli</td>
+    <td>Italy</td>
+  </tr>
+</table>
+</div>
 
 <div class="footer">
   <p>Ella Zhang</p>
 </div>
+
+
 
 </body>
 </html>
