--- a/index.html
+++ b/index.html
@@ -1,74 +1,21 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
-<title>vr</title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="style.css">
+    <meta charset="utf-8" />
+    <link rel="icon" href="./favicon.ico" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="VR" />
+    <link rel="manifest" href="./manifest.json" />
+    <script src="./data.js"></script>
+    <title>VR</title>
+    <script defer="defer" src="./static/js/main.9256a575.js"></script>
+    <link href="./static/css/main.5642b370.css" rel="stylesheet">
 </head>
-<body>
 
-
-  <div class="topnav">
-    <div class="row">
-    <div class="column">
-    <a href="index.html"><h5>VR</h5></a> 
-  </div>
-  <div class="column">
-    <a href="usesofvr.html"><h5>Uses of VR</h5></a> </div>
-    <div class="column">
-    <a href="historyofvr.html"><h5>The history of VR</h5></a> </div>
-  
-    </div>
-  </div>
-    
-
-<div class="header">
-  <a href="https://www.w3schools.com/">Visit W3Schools.com!</a>
-  <h1>VR</h1>
-  <div id="google_translate_element"></div>
-
-		    <script type="text/javascript">
-        function googleTranslateElementInit() {
-            new google.translate.TranslateElement(
-                {pageLanguage: 'en'},
-                'google_translate_element'
-            );
-        }
-    </script>
- 
-	<script type="text/javascript"
-				src=
-	"https://translate.google.com/translate_a/element.js?
-	cb=googleTranslateElementInit">
-		</script>
-</div>
-
-<div class="row">
-  <div class="column" style="background-color:#96e3a8;">
-    <h4>What is VR?</h4>
-    <p>write here</p>
-    <img src="images/metaverse.jpg" alt="metaverse" style="width:100px;height:100px;">
-  </div>
-
-  <div class="column" style="background-color:#f4fa81;">
-    <h4>Uses of VR?</h4>
-    <p>write here</p>
-    <img src="images/girlwithvrglass.jpg" alt="glass" style="width:100px;height:100px;">
-  </div>
-
-  <div class="column" style="background-color:#e76363;"><h4>What is VR?</h4>
-    <p>write here</p>
-    <img src="images/metaverse.jpg" alt="metaverse" style="width:100px;height:100px;">
-  </div>
-</div>
-
-<div class="Introduction">
-  <h2>HTML Table</h2>
-
-<div class="footer">
-  <p>Ella Zhang</p>
-</div>
-
+<body><noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
 </body>
+
 </html>
